database.dev.yaml
apiVersion: v1
kind : PersistentVolumeClaim
metadata:
  name: postgres-dev-pvc
spec:
  storageClassName: ""
  volumeName: postgres-dev-pv
  accessModes:
    - ReadWriteOnce
  # DB가 요청할 볼륨의 리소스
  resources:
    requests:
      storage: 10G
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-dev
  template:
    metadata:
      labels:
        app: postgres-dev
    spec:
      containers:
      - name: postgres
        image: postgres:13.3
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-dev-storage
      volumes:
      - name: postgres-dev-storage
        persistentVolumeClaim:
          claimName: postgres-dev-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-dev-svc
spec:
  selector:
    app: postgres-dev
  ports:
  - name: http
    port: 5432
    protocol: TCP
    targetPort: 5432
  type: LoadBalancer
  loadBalancerIP: "34.64.54.39"
